--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 
     <p>
-      I'm a student at GITAM University. I'm currently in 6th Semester by the time I'm writing this html code.
-      Parallely I've been working on problem solving on leetcode. Though its not huge leaps of progress I'm sure it'll add up sometime.
+      I am a student at GITAM University, currently thriving in my 6th semester. In addition to my studies, I am actively engaged in solving coding problems on Leetcode.<br>
+      I am continuously working to improve my skills and I am confident that my efforts will pay off in the long run. I am excited to see how much I can grow and achieve.
     </p>
     <hr size="2" noshade>
 
